feat(fullstack): add products denial handler
